[gd_scene load_steps=7 format=3 uid="uid://cfmi0uv83hv4m"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_w78kr"]
[ext_resource type="Shader" path="res://pause_menu.gdshader" id="2_11hmd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f8pdp"]
shader = ExtResource("2_11hmd")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_t2m8o"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_mp8wf"]
resource_name = "loop"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4bmdh"]
_data = {
"RESET": SubResource("Animation_t2m8o"),
"loop": SubResource("Animation_mp8wf")
}

[node name="MarginContainer" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w78kr")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_f8pdp")
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4bmdh")
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Reanudar" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "                Reanudar                 "

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Menu" type="Button" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "            Menu Principal           "

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Salir" type="Button" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
text = "                     Salir                      "

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/Reanudar" to="." method="_on_reanudar_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/Salir" to="." method="_on_salir_pressed"]
